# philbart_ws

./: .gitignore
build_isolated/: catkin_make_isolated.cache
build_isolated/aus05_philbart/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
build_isolated/ethz_piksi_ros/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
build_isolated/philbart_localization/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
build_isolated/philbart_navigation/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
build_isolated/philbart_tools/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
build_isolated/piksi_multi_rtk_ros/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
build_isolated/piksi_pps_sync/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
build_isolated/piksi_rtk_kml/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
build_isolated/piksi_rtk_msgs/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
build_isolated/piksi_v2_rtk_ros/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
build_isolated/rviz_satellite/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
build_isolated/sick_scan/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
build_isolated/source_localization/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
devel_isolated/: env.sh  setup.bash  setup.sh  setup.zsh
devel_isolated/aus05_philbart/: .rosinstall  local_setup.sh  setup.sh
devel_isolated/ethz_piksi_ros/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel_isolated/philbart_localization/: .catkin  .rosinstall  _setup_util.py
devel_isolated/philbart_navigation/: local_setup.sh  setup.sh
devel_isolated/philbart_tools/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
devel_isolated/piksi_multi_rtk_ros/: .catkin  (+2 more)
src/mg_811_co2_sensor/: CMakeLists.txt  package.xml
src/mg_811_co2_sensor/launch/: mg_811_serial_node.launch
src/mg_811_co2_sensor/msg/: MG811Msg.msg
src/mg_811_co2_sensor/src/: mg_811_serial_node.py
src/nrg_gas_concentration_server/: CMakeLists.txt  package.xml
src/nrg_gas_concentration_server/include/nrg_gas_concentration_server/: nrg_gas_concentration_server.h
src/nrg_gas_concentration_server/launch/: nrg_gas_concentration_server.launch
src/nrg_gas_concentration_server/msg/: WindParams.msg
src/nrg_gas_concentration_server/src/: nrg_gas_concentration_server.cpp  nrg_gas_concentration_server_node.cpp
src/nrg_gas_concentration_server/src/nrg_gas_concentration_server/: nrg_gas_concentration_server.cpp
src/nrg_gas_concentration_server/srv/: GetConcentration.srv  SetSource.srv  SetWindParams.srv
src/nrg_gas_concentration_server/test/: test_nrg_gas_concentration_server.cpp  test_nrg_gas_concentration_server.test
src/nrg_gas_concentration_server/tests/: test_nrg_gas_concentration_server_node.cpp
src/nrg_gas_source_localization/: CMakeLists.txt  package.xml
src/nrg_gas_source_localization/bagfiles/: single_source_a_data.bag  single_source_b_data.bag  single_source_c_data.bag
src/nrg_gas_source_localization/data/one_source/: README.txt  a_3D_data.json  b_data.json  b_data_matlab.txt  c_data_matlab.txt
src/nrg_gas_source_localization/data/sim_params/: b_params.json
src/nrg_gas_source_localization/data/three_source/: a_data.json  source.json
src/nrg_gas_source_localization/include/: nrg_sl_data_test_node.h  nrg_sl_node.h  nrg_sl_particle_filter.h  nrg_sl_utils.h
src/nrg_gas_source_localization/include/nrg_gas_source_localization/: nrg_sl_particle_filter.h  nrg_sl_utils.h
src/nrg_gas_source_localization/launch/: nrg_gas_source_localization.launch  nrg_gas_source_localization_data_test_node.launch
src/nrg_gas_source_localization/src/: nrg_sl_data_test_node.cpp  nrg_sl_node.cpp  nrg_sl_particle_filter  nrg_sl_particle_filter.cpp  nrg_sl_utils.cpp
src/nrg_gas_source_localization/src/nrg_gas_source_localization/: nrg_sl_particle_filter.cpp  nrg_sl_utils.cpp
src/source_localization/: CMakeLists.txt
src/source_localization/data/: data_generator.py
src/source_localization/data/one_source/: a_data_matlab.json  a_data_matlab.txt  b_3D_data.json  c_data.json
src/source_localization/data/sim_params/: README.txt  a_params.json
src/source_localization/data/three_source/: README.txt  b_data.json
src/source_localization/data/two_source/: README.txt
src/source_localization/include/data/: data_structs.h
src/source_localization/include/map/: map.h
src/source_localization/include/pf/: pf.h  pf_pdf.h  pf_vector.h
src/source_localization/include/plume/: plume.h  prediction.h
src/source_localization/include/sensors/: sl_anemometer.h  sl_sensor.h
src/source_localization/particle_filter/: README.md
src/source_localization/particle_filter/include/: initialize.h  particle_filter.h  predict.h  resample.h  reweight.h  utils.h
src/source_localization/particle_filter/playpen/: main_playpen.cpp
src/source_localization/particle_filter/src/: initialize.cpp  main.cpp  particle_filter.cpp  predict.cpp  utils.cpp
src/source_localization/src/: particle_filter  particle_filter.cpp  source_localization_node.cpp
src/source_localization/src/map/: map.cpp
src/source_localization/src/pf/: pf.cpp  pf_pdf.cpp  pf_vector.cpp
src/source_localization/src/playpen/: main_playpen
src/source_localization/src/plume/: prediction.cpp
src/source_localization/src/sensors/: sl_anemometer.cpp  sl_sensor.cpp
src/source_localization/src/trial/: sl_sensor_trial  sl_sensor_trial.cpp
(+748 files in other folders)
