<?xml version="1.0"?>
<package>
  <name>mg_811_c02_sensor</name>
  <version>0.3.4</version>
  <description>philbart_tools</description>

  <author email="jackborer@utexas.edu">Jack Borer</author>
  <maintainer email="jackborer@utexas.edu">Jack Borer</maintainer>

  <license>BSD</license>

  
  <buildtool_depend>catkin</buildtool_depend>
  <export>
  </export>
</package>
